<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pro Path Lite</string>
    <string name="app_tag_line">Connected Athlete Support</string>
    <string name="register">Register</string>
    <string name="permission_msg_audio">Permission required for voice feature</string>
    <string name="permission_title_see_data">Permission Required</string>
    <string name="permission_message_see_data">Permission is required to see data</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="default_notification_chanel_id" translatable="false">notification channel_id</string>
    <string name="delete">Delete</string>
    <string name="deleting">Deleting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_your_password">Forgot Your Password ?</string>
    <string name="forgot_password_message">Enter your email below to receive your password reset instructions</string>
    <string name="send">Send</string>
    <string name="contacts">Contacts</string>
    <string name="groups">Groups</string>
    <string name="invite">Invite</string>
    <string name="settings">Settings</string>
    <string name="feedback">Help &amp; Feedback</string>
    <string name="shop">Shop</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="education">Education</string>
    <string name="training_plan">Training and Testing</string>
    <string name="career">Career</string>
    <string name="nutrition">Health and Nutrition</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="otp">OTP</string>
    <string name="verify">Verify</string>
    <string name="athlete_life">Athlete Life</string>
    <string name="please_choose">Please Choose</string>
    <string name="progress_review">Progress Review</string>
    <string name="athlete_name">Athlete Name</string>
    <string name="enter_future_career">Enter Future Career</string>
    <string name="submit">Submit</string>
    <string name="create_career_plan">Create Career Plan</string>
    <string name="reset">Reset</string>
    <string name="reset_your_password">Reset Your Password?</string>
    <string name="new_password">New Password</string>
    <string name="notifications">Notifications</string>
    <string name="preference_notification">preference notification</string>
    <string name="preference_archive">preference archive</string>
    <string name="preference_edit_profile">preference edit profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About Us</string>
    <string name="preferenc_change_password">change password</string>
    <string name="preference_about_us">about us preference</string>
    <string name="add_contact">Add Contacts</string>
    <string name="member_request">Member Request</string>
    <string name="friends">Friends</string>
    <string name="message_all_fields_required">All fields are required</string>
    <string name="message_success">Successful</string>
    <string name="add_contact_single">Add Contact</string>
    <string name="message_failed">Failed</string>
    <string name="error_occurred">Some error occurred.</string>
    <string name="error_connecting_to_server">Not connecting to server.</string>
    <string name="message_microphone_permission">Please Give Microphone Permission For Voice To Text Feature.</string>
    <string name="message_saving">Saving</string>
    <string name="message_sharing">Sharing</string>
    <string name="message_sending">Sending</string>
    <string name="message_loading">Loading</string>
    <string name="message_updating">Updating</string>
    <string name="message_wait">Wait</string>
    <string name="message_coming_soon">Coming soon</string>
    <string name="admin">Admin</string>
    <string name="all">All</string>
    <string name="add">Add</string>
    <string name="open_chat">Open Chat</string>
    <string name="change_name">Change Name</string>
    <string name="change_photo">Change Photo</string>
    <string name="delete_conversation">Delete Conversation</string>
    <string name="leave_group">Leave Group</string>
    <string name="ignore_group">Ignore Group</string>
    <string name="lorem_ipsum_small">
        sfjsfjflsjflfjlsfjlsfjs ff
    </string>
    <string name="people">People</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="canceled">Canceled</string>
    <string name="search">Search</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="title">Title</string>
    <string name="next">Next</string>
    <string name="are_you_sure"></string>
    <string name="done">Done</string>
    <string name="files_notes"><![CDATA[Files & Notes]]></string>
    <string name="preference_faq">FAQ</string>
    <string name="share_link">Share Link</string>
    <string name="title_activity_event">ActivityEvent</string>
    <string name="preference_feedback">Feedback</string>
    <string name="dialog_add_link_title">Insert a link</string>
    <string name="profile_view_btn_send_request">Send Request</string>
    <string name="btn_send_connection_request">Send Request to Connect</string>
    <string name="video">Video</string>
    <string name="enter">Enter</string>
    <string name="questionsList">Survey</string>
    <string name="video_analysis">Video Analysis</string>
    <string name="dash_match_analysis">Match Analysis</string>
    <string name="dash_match_day">Match Day</string>
    <string name="no_connection">No Internet Connection.</string>
    <string name="title_no_connection">No Internet Connection.</string>
    <string name="message_no_connection">Please make sure device is connected to internet.</string>
    <string name="image">Image</string>
    <string name="pending">Pending</string>
    <string name="news_feed_setting_public">Public</string>
    <string name="news_feed_setting_connection">Connections</string>
    <string name="news_feed_comment_allow">Allow Comments on this post</string>
    <string name="news_feed_comment_disable">Disable comments on this post</string>
    <string name="feedback_title">Thank you for taking time to download Pro Path. You can ask for help or give feedback here.</string>
    <string name="notes_category_title">Category:</string>
    <string name="note_uncategorised">Uncategorized</string>
    <string name="media">Media</string>
    <string name="document">Document</string>
    <string name="link">Link</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="notes_delete">Delete Note</string>
    <string name="notes_edit">Edit Note</string>
    <string name="failed_title">Failed</string>
    <string name="close">Close</string>
    <string name="create">Create</string>
    <string name="created_by">By</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="rating_button_title">Next</string>
    <string name="Survey_title">Survey Title</string>
    <string name="Survey_questions">Questions</string>
    <string name="survey_description">Survey Description</string>
    <string name="survey_desc">Survey Descriptors</string>
    <string name="survey_type">Survey Type</string>
    <string name="survey_preview">Survey Preview</string>
    <string name="survey_questions">Survey Questions</string>
    <string name="enable_survey">Enable Survey</string>
    <string name="show_names">Show Names</string>
    <string name="survey_settings">Survey Settings</string>
    <string name="survey_contacts">Survey Contacts</string>
    <string name="survey_submit">Submit Survey</string>
    <string name="stat_data">Stat Data</string>
    <string name="create_survey">Create Survey</string>
    <string name="preview">Preview</string>
    <string name="survey">Survey</string>
    <string name="news_feed">News Feed</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="post">Post</string>
    <string name="visibility_settings">Visibility Settings</string>
    <string name="plan_item_title">Enter title or link</string>
    <string name="match_video_analysis" tools:ignore="ExtraTranslation">Received</string>
    <string name="match_team_analysis">Create</string>
    <string name="match_individual_statistics">Create</string>
    <string name="result">Results</string>
    <string name="choose_sport">Choose Sport</string>
    <string name="edit">Edit</string>
    <string name="past_statistics">Past</string>
    <string name="no_data_found">No Data Found</string>
    <string name="future_statistics">Future</string>
    <string name="message">Message</string>
    <string name="connections">Connections</string>
    <string name="profile_name">Profile Name</string>
    <string name="comment">Comment</string>
    <string name="self_review_report">Self Review Report</string>
    <string name="self_review">Self Review</string>
    <string name="progress_report">Progress Report</string>
    <string name="progress">Progress</string>
    <string name="enter_qualification">Enter Qualification</string>
    <string name="view_coach_feedback_title">View Athlete Review</string>
    <string name="coach_feedback_title">Match Feedback</string>
    <string name="school_review_title">School Review</string>
    <string name="role">Role</string>
    <string name="coach_name">Coach Name</string>
    <string name="created_date">Created Date</string>
    <string name="events">Events / Match</string>
    <string name="workons">Workons</string>
    <string name="improvements">Improvements</string>
    <string name="improvements_desc">What needs to be better?</string>
    <string name="strengths">Strengths</string>
    <string name="strengths_desc">Whats going well?</string>
    <string name="suggestions">Suggestions</string>
    <string name="suggestions_desc">What else could be tried?</string>
    <string name="assistance_requested">Assistance Required</string>
    <string name="assistance_offered">Assistance Offered</string>
    <string name="assistance_desc">What help is needed?</string>
    <string name="multiple_choice_title">Multi Choice</string>
    <string name="multiple_choice_preview">Multi Choice preview</string>
    <string name="yes_no">Yes/No</string>
    <string name="yes_no_preview">Yes/No preview</string>
    <string name="multiple_choice_hint">Enter Possible Response</string>
    <string name="multiple_choice_options_hint_a">a. </string>
    <string name="multiple_choice_options_hint_b">b.</string>
    <string name="multiple_choice_options_hint_c">c.</string>
    <string name="multiple_choice_options_hint_d">d.</string>
    <string name="multiple_choice_options_hint_e">e.</string>
    <string name="multiple_choice_question_hint">Question</string>
    <string name="default_date_time">00–00–00 00:00 am</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="colon">:</string>
    <string name="edit_training_plan">Edit Training Plan</string>
    <string name="create_training_plan">Create Training Plan</string>
    <string name="enter_title">Enter title</string>
    <string name="description">Description</string>
    <string name="enter_link">Enter link</string>
    <string name="create_note">Create Note</string>
    <string name="training_plan_item">Training Plan Item</string>
    <string name="options_menu">Options Menu</string>
    <string name="txt_feedback_title">Ask for help or give feedback</string>
</resources>