<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:title="Home"
        android:icon="@drawable/ic_dashboard"
        android:checkable="true"
        android:checked="true"
        />

    <!--<item
        android:id="@+id/menu_search"
        android:title="Search"
        android:icon="@drawable/ic_search"
        android:checkable="false" />-->

    <item
        android:id="@+id/menu_profile"
        android:title="Profile"
        android:icon="@drawable/ic_profile"
        android:checkable="false" />


    <!--<item
        android:id="@+id/menu_add_contacts"
        android:title="@string/add_contact"
        android:icon="@drawable/ic_add_contact"
        android:checkable="false" />
-->

    <item
        android:id="@+id/menu_contacts"
        android:title="@string/contacts"
        android:icon="@drawable/ic_contact"
        android:checkable="false" />

   <!-- <item
        android:id="@+id/menu_groups"
        android:title="@string/groups"
        android:icon="@drawable/ic_group"
        android:checkable="true" />-->

    <item
        android:id="@+id/menu_notes"
        android:title="@string/files_notes"
        android:icon="@drawable/ic_notes"
        android:checkable="false" />


    <!--<item
        android:id="@+id/menu_video"
        android:title="@string/video"
        android:icon="@drawable/ic_video"
        android:checkable="false" />-->

    <item
        android:id="@+id/menu_survey"
        android:title="@string/questionsList"
        android:icon="@drawable/ic_survey"
        android:checkable="false" />
    <item
        android:id="@+id/menu_shop"
        android:title="@string/shop"
        android:icon="@drawable/ic_shop"
        android:checkable="true" />


    <item
        android:id="@+id/menu_invite"
        android:title="@string/invite"
        android:icon="@drawable/ic_invite"
        android:checkable="false" />

    <item
        android:id="@+id/menu_setting"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:checkable="false" />


    <item
        android:id="@+id/menu_feedback"
        android:title="@string/feedback"
        android:icon="@drawable/ic_feedback"
        android:checkable="true" />

</menu>