<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="@string/preference_notification"
        android:title="@string/notifications"
        android:checked="true"
        android:buttonTint="@color/colorAccent" />

    <!--<SwitchPreference-->
        <!--android:key="@string/preference_archive"-->
        <!--android:title="Auto Archive December 31"-->
        <!--android:checked="true"-->
        <!--android:buttonTint="@color/colorAccent"-->
        <!--/>-->

   <!-- <Preference
        android:title="Edit Profile"
        android:key="@string/preference_edit_profile"
        android:layout="@layout/preference_edit_profile_layout" />-->

    <Preference
        android:title="Change Password"
        android:key="@string/preferenc_change_password"
        android:layout="@layout/preference_change_password" />

   <!-- <Preference
        android:title="FAQ"
        android:key="@string/preference_faq"
        android:layout="@layout/preference_faq_layout" />-->

<!--    <Preference
        android:title="Feedback"
        android:key="@string/preference_feedback"
        android:layout="@layout/preference_feedback"/>-->



</PreferenceScreen>