<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ActivityCreateRatingScale">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:layout_marginTop="@dimen/dp_16"
        android:textSize="@dimen/txtSizeTitle"
        android:layout_gravity="center"
        android:textColor="@color/colorTheme"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_20">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_profile"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_16"
            android:textColor="@color/colorDarkGrey"
            android:text="@string/created_by"
            android:textSize="@dimen/txtSize"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/dp_16" />

    </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_25"
         android:weightSum="2"
         android:orientation="horizontal">

         <EditText
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:textSize="@dimen/txtSize"
             android:layout_weight="1"
             android:layout_marginRight="@dimen/dp_10"
             android:textColor="@color/colorDarkGrey"
             android:textColorHint="@color/colorDarkGrey"
             android:hint="@string/date"
             android:paddingBottom="@dimen/dp_5"
             android:background="@drawable/border_bottom_light_grey_1dp"
             android:inputType="text"
             tools:ignore="Autofill"
             android:layout_marginEnd="@dimen/dp_10" />


         <EditText
             android:layout_width="@dimen/dp_0"
             android:layout_height="wrap_content"
             android:textSize="@dimen/txtSize"
             android:layout_weight="1"
             android:layout_marginLeft="@dimen/dp_10"
             android:textColor="@color/colorDarkGrey"
             android:textColorHint="@color/colorDarkGrey"
             android:hint="@string/time"
             android:paddingBottom="@dimen/dp_5"
             android:background="@drawable/border_bottom_light_grey_1dp"
             android:inputType="text"
             tools:ignore="Autofill"
             android:layout_marginStart="@dimen/dp_10" />
     </LinearLayout>

     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dp_30"
         android:hint="@string/Survey_title"
         android:textColorHint="@color/colorDarkGrey"
         android:textSize="@dimen/txtSize"
         android:paddingBottom="@dimen/dp_5"
         android:background="@drawable/border_bottom_light_grey_1dp"
         android:inputType="text"
         tools:ignore="Autofill" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_30"
            android:hint="@string/survey_desc"
            android:textColorHint="@color/colorDarkGrey"
            android:textSize="@dimen/txtSize"
            android:paddingBottom="@dimen/dp_5"
            android:background="@drawable/border_bottom_light_grey_1dp"/>


        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnHeight"
            android:layout_marginTop="@dimen/dp_60"
            android:layout_gravity="center"
            android:background="@drawable/btn_bg"
            android:text="@string/rating_button_title"
            android:textColor="@color/colorPageBg"
            android:layout_marginLeft="@dimen/dp_60"
            android:layout_marginRight="@dimen/dp_60"
            android:textSize="@dimen/txtSizeTitle"/>
    </LinearLayout>
</LinearLayout>